--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
         loading="lazy"
         class="socicon"
     /></a> -->
-    <a href="#" target="_blank"
+    <a href="https://www.linkedin.com/in/umera-ghori" target="_blank"
       ><img
         src="./developer-portfolio/assets/icons/icons8-linkedin-circled.gif"
         alt="Linkedin"
         loading="lazy"
         class="socicon"
     /></a>
-    <a href="#" target="_blank"
+    <a href="https://github.com/UmeraGhori" target="_blank"
       ><img src="./developer-portfolio/assets/icons/icons8-github.gif" alt="Github" class="socicon"
     /></a>
     </div>
