--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     <div class="projects-container">
       <div class="project-container project-card">
         <img
-          src="developer-portfolio/assets/images/Weather.png"
+          src="developer-portfolio/assets/images/spotify.png"
           alt="expense-tracker"
           loading="lazy"
           class="project-pic"
         />
-        <h3 class="project-title">Weather App</h3>
-        <a href="" target="_blank" class="project-link">Check it Out</a>
+        <h3 class="project-title">Spotify App</h3>
+        <a href="https://spotify-music-website-clone.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img
