--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="project-container project-card">
         <img
           src="developer-portfolio/assets/images/spotify.png"
-          alt="expense-tracker"
+          alt="Spotify App"
           loading="lazy"
           class="project-pic"
         />
@@ -125,18 +125,18 @@
       </div>
       <div class="project-container project-card">
         <img
-          src="./developer-portfolio/assets/images/todo.png"
-          alt="netflic-clone"
+          src="./developer-portfolio/assets/images/MultiEcom.png"
+          alt="MultiEcom App"
           loading="lazy"
           class="project-pic"
         />
-        <h3 class="project-title">To-Do Application</h3>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <h3 class="project-title">Multi Ecommerce Store</h3>
+        <a href="https://multistore-ecommerce.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img
           src="developer-portfolio/assets/images/Weather.png"
-          alt="greeny-earth"
+          alt="Weather App"
           loading="lazy"
           class="project-pic"
         />
@@ -197,20 +197,6 @@
   </section>
 
   <div class="socials">
-    <!-- <a href="#" target="_blank"
-      ><img
-        src="./developer-portfolio/assets/icons/icons8-twitter-circled.gif"
-        alt="Twitter"
-        loading="lazy"
-        class="socicon"
-    /></a> -->
-    <!-- <a href="#" target="_blank"
-      ><img
-        src="./developer-portfolio/assets/icons/icons8-instagram.gif"
-        alt="Instagram"
-        loading="lazy"
-        class="socicon"
-    /></a> -->
     <a href="https://www.linkedin.com/in/umera-ghori" target="_blank"
       ><img
         src="./developer-portfolio/assets/icons/icons8-linkedin-circled.gif"
