--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           loading="lazy"
           class="project-pic"
         />
-        <h3 class="project-title">Spotify App</h3>
-        <a href="https://spotify-music-website-clone.netlify.app/" target="_blank" class="project-link">Check it Out</a>
+        <h3 class="project-title">E-commerce Dashboard (MERN)</h3>
+        <a href="https://ecom-dashboard-mern.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img
@@ -130,7 +130,7 @@
           loading="lazy"
           class="project-pic"
         />
-        <h3 class="project-title">Multi Ecommerce Store</h3>
+        <h3 class="project-title">Multi E-commerce Store</h3>
         <a href="https://multistore-ecommerce.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
