--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <div class="projects-container">
       <div class="project-container project-card">
         <img
-          src="developer-portfolio/assets/images/spotify.png"
-          alt="Spotify App"
+          src="developer-portfolio/assets/images/E-com mern dashboard.png"
+          alt="E-commerce Dashboard"
           loading="lazy"
           class="project-pic"
         />
