--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
       <p class="bio-text">
-        Web developer : frontend <br> Blockchain developer <br> NFT creator <br> Coding Instructor <br> Freelancer
+        Web developer : FullStack<br> Blockchain developer <br> Web Developer Trainee <br> Freelancer
         </p>
       </pre>
     </div>
@@ -53,12 +53,12 @@
 <section class="more-about">
     <h2>More About Me</h2>
     <p style="font-size: 15px;">
-  Hello, <br> I am <b>UMERA GHORI</b>. Expertised Web developer and NFTs creator along with this i have created lots of websites as a Freelancer: <br> <ul>
-    <li style="list-style-type: circle;">Dynamic</li>
-    <li style="list-style-type: circle;">Responsive</li>
-    <li style="list-style-type: circle;">Functional</li>
+  Hello, <br> I am <b>UMERA GHORI</b>. <br>Expertised Web developer and Trainee along with this I have collobrate with so many projects as a Freelancer: <br> <ul>
+    <li style="list-style-type: circle;">Responsive And Dynamic Websites</li>
+    <li style="list-style-type: circle;">E-commerce Websites </li>
+    <li style="list-style-type: circle;">MERN Websites</li>
   </ul><br>
-  as well as i am passionate coding instructor and worked with lots of Edtech Companies.
+  I am passionate coding instructor and worked with lots of Edtech Companies.
     </p>
   </section>
 
