--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="bio animate__animated animate__shakeX">
       <h2 class="bio-title">About Me</h2>
       <p class="bio-text">
-        Web developer : FullStack<br> Blockchain developer <br> Web Developer Trainee <br> Freelancer
+        FullStack Developer <br> Blockchain developer <br> No-Code/Low-Code Developer <br> Instructor
         </p>
       </pre>
     </div>
@@ -53,9 +53,9 @@
 <section class="more-about">
     <h2>More About Me</h2>
     <p style="font-size: 15px;">
-  Hello, <br> I am <b>UMERA GHORI</b>. <br>Expertised Web developer and Trainee along with this I have collobrate with so many projects as a Freelancer: <br> <ul>
+  Hello, <br> I am <b>UMERA GHORI</b>. <br>Expertised Web developer and Trainee along with this I have collobrated with so many projects as a Freelancer: <br> <ul>
     <li style="list-style-type: circle;">Responsive And Dynamic Websites</li>
-    <li style="list-style-type: circle;">E-commerce Websites </li>
+    <li style="list-style-type: circle;">Saas No-Code/Low-Code Custom Websites</li>
     <li style="list-style-type: circle;">MERN Websites</li>
   </ul><br>
   I am passionate coding instructor and worked with lots of Edtech Companies.
@@ -89,19 +89,19 @@
 
       <div class="second-set animate__animated animate__pulse">
         <img
-          src="./developer-portfolio/assets/icons/icons8-bootstrap.svg"
-          alt=""
-          loading="lazy"
-          class="icon icon-card"
-        />
-        <img
-          src="./developer-portfolio/assets/icons/icons8-react-native.svg"
+          src="./developer-portfolio/assets/icons/640px-MERN-logo.png"
           alt=""
           loading="lazy"
           class="icon icon-card"
         />
         <img
           src="./developer-portfolio/assets/icons/icons8-git.svg"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="./developer-portfolio/assets/icons/bubble logo image.png"
           alt=""
           loading="lazy"
           class="icon icon-card"
@@ -142,6 +142,31 @@
         />
         <h3 class="project-title">Weather App</h3>
         <a href="https://weather-city-temp-app.netlify.app/" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+
+
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img
+          src="./developer-portfolio/assets/images/crypto coin price app.png"
+          alt="Crypto Coin Price App"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Crypto Coin Price App (No-Code)</h3>
+        <a href="https://cryptopriceapp.bubbleapps.io" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img
+          src="developer-portfolio/assets/images/recipe app .png"
+          alt="Dessert Recipe Sharing App"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Dessert Recipe Sharing App (No-Code)</h3>
+        <a href="https://recipe-app-56634.bubbleapps.io" target="_blank" class="project-link">Check it Out</a>
       </div>
     </div>
   </section>
