--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
 
       <div class="project-container project-card">
         <img
+          src="developer-portfolio/assets/images/microsoft to do.png"
+          alt="Microsoft TO_Do App"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Microsoft To Do Clone App(No-Code)</h3>
+        <a href="https://innovation-10499.bubbleapps.io/" target="_blank" class="project-link">Check it Out</a>
+      </div>
+
+      <div class="project-container project-card">
+        <img
           src="developer-portfolio/assets/images/recipe app .png"
           alt="Dessert Recipe Sharing App"
           loading="lazy"
