--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           class="project-pic"
         />
         <h3 class="project-title">Crypto Coin Price App (No-Code)</h3>
-        <a href="https://cryptopriceapp.bubbleapps.io" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://cryptopriceapp.bubbleapps.io/version-test" target="_blank" class="project-link">Check it Out</a>
       </div>
 
       <div class="project-container project-card">
@@ -166,7 +166,7 @@
           class="project-pic"
         />
         <h3 class="project-title">Microsoft To Do Clone App(No-Code)</h3>
-        <a href="https://innovation-10499.bubbleapps.io/" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://innovation-10499.bubbleapps.io/version-test/index" target="_blank" class="project-link">Check it Out</a>
       </div>
 
       <div class="project-container project-card">
@@ -177,7 +177,7 @@
           class="project-pic"
         />
         <h3 class="project-title">Dessert Recipe Sharing App (No-Code)</h3>
-        <a href="https://recipe-app-56634.bubbleapps.io" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://recipe-app-56634.bubbleapps.io/version-test" target="_blank" class="project-link">Check it Out</a>
       </div>
     </div>
   </section>
